# bxktemplate

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: helper.cmake
src/: CMakeLists.txt
tools/generator/: generate_module.py
tools/template/: bxktemplate-config.cmake.in  module.cc.in  module.h.in  module_version.h.in
